--- a/my-app/src/component/style.css
+++ b/my-app/src/component/style.css
@@ -7,6 +7,13 @@
     text-align: left;
   }
   
+.put {
+  text-align: left;
+}
+.button {
+  text-align: left;
+}
+  
   .item {
     margin-top: 0.3rem;
     vertical-align: text-bottom;
@@ -41,7 +48,9 @@
   .select-list-item label {
     vertical-align: text-bottom;
     margin-left: 0.2rem;
+
   }
+
   
   
   @media screen and (max-width: 600px) {
